Changelog for version 4.0.x (git HEAD):
* Added displaying recruit counter during meetings next to name of recruiter.
* Added coloring names of your members according to their juice level for
easier distinguishing them. It's not everywhere, just where it counts.
* Moved the repository from svn to git and cleaned up the history from binary
blobs while at it (reduced size from 300MB to 7.5MB)

ChangeLog for Version 3.11.4:

2007-07-14   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* Created branch
* commonactions.cpp: Added enforcement of the -50 juice minimum.
* fight.cpp, haulkidnap.cpp, commondisplay.cpp, getnames.cpp, shopsnstuff.cpp,
stealth.cpp, includes.h: Replaced Axe with Daisho (axe skill removed) and
changed the getweaponfull function to support three versions of the call,
ignored by most weapons but used by Daisho to decide whether the weapon is
called Daisho, Katana, or Wakizashi, depending on the context the weapon is
used in.
* activate.cpp, fight.cpp, commonactions.cpp, commondisplay.cpp, creature.cpp,
getnames.cpp, date.cpp, news.cpp, siege.cpp, lcsmonthly.cpp, sitemode.cpp,
stealth.cpp, talk.cpp, newgame.cpp, includes.h: Pretty much doubled the number
of skills, and removed a couple of minor melee skills.
* activate.cpp, getnames.cpp, activities.cpp, includes.h: New activate the
uninvolved interface and about doubled the number of actions a Liberal can be
assigned to. Not all are working yet.
* activities.cpp: Heavily rewritten interrogation system.
* activate.cpp: Changed to Return to back out of a few screens where it said it
wanted X.
* activities.cpp, daily.cpp, justice.cpp: Some actions now steadily diminish in
skill gains depending on current skill level. Currently exploitable by dropping
juice to cap the skill low and then practicing heavily before switching back.
* daily.cpp: Blood (injury level) slowly heals daily, but major injuries must
be treated at a hospital. Still really shallow.