@@ -1,4 +1,6 @@
 Changelog for version 4.0.x (git HEAD):
+* Changed recruit action mechanics to automatically start conversation
+when only 1 recruit found is left
 * Added displaying recruit counter during meetings next to name of recruiter.
 * Added coloring names of your members according to their juice level for
 easier distinguishing them. It's not everywhere, just where it counts.
